Attempt to fix whitespace issue on mobile

--- a/assets/css/2-sections/_home-header.sass
+++ b/assets/css/2-sections/_home-header.sass
@@ -14,8 +14,7 @@
             position: center
             size: contain
         height: 200px
-        padding: 0
-        margin: 30px 0
+        padding: 30px 0
         flex-grow: 1
         
     .kicker
